--- a/templates/index.html
+++ b/templates/index.html
@@ -111,8 +111,12 @@
 
                     <div class="columns download">
                         <p>
-                            <a href="/download/CV" download class="button"><i class="fa fa-download"></i>Download
+                            <a href="/download/cv" download class="button"><i class="fa fa-download"></i>Download
                                 Resume</a>
+                        </p>
+                        <p>
+                            <a href="/download/vc" download class="button"><i class="fa fa-download"></i>Download
+                                Visit Card</a>
                         </p>
                     </div>
 
