update cv, add pytest, reduce bash knowledge

--- a/templates/index.html
+++ b/templates/index.html
@@ -196,7 +196,7 @@
                             Some of them: Asana, Discord, Telegram, Skype, Monday, Slack, Sentry, AWS, GoogleCloud, Docker, CircleCI.
                         </p>
                         <p>
-                            Established CiclerCI and Docker Swarm - Hub for continuous integration and delivery in our Github projects.
+                            Established CircleCI, Docker Swarm - Hub, pytest, for continuous integration and delivery in our Github projects.
                         </p>
                         <p>
                             Created webApps (HTML5, CSS3, JavaScript, Python) to research transactions of Ethereum and recovery of lost IOTA funds with proper backends in Flask.
@@ -263,7 +263,7 @@
                         <p class="info">Experienced</p>
 
                         <p>
-                            Python3, Flask, Kivy, Click, Requests, bs4, multiprocessing, REST APIs, MongoDB,  Win 7, 10, Ubuntu Server
+                            Python3, Flask, Kivy, Click, Requests, pytest, multiprocessing, REST APIs, MongoDB,  Win 7, 10, Ubuntu Server
                         </p>
                             
 
@@ -277,7 +277,7 @@
                         <p class="info">Confident</p>
 
                         <p>
-                            CircleCI, Selenium Webdriver, Github, Docker Swarm, Google Cloud, Git Flow, Asana, Monday, Sentry
+                            CircleCI, Selenium Webdriver, Github, Docker Swarm, Git Flow, Asana, Monday, Sentry
                         </p>
                         <p>
                             HTML, JavaScript, CSS, XML, Bootstrap, unittest, Redis, Inkscape, Gimp, Visual Studio Code, Atom, Sublime text 3
@@ -294,7 +294,7 @@
                         <p class="info">Confortable</p>
 
                         <p>
-                            AWS, Agile, jQuery, VMware, Bash, K8S, StackDriver, Django, SQlite, PostgreSQL, Photoshop, Illustrator
+                            AWS, Agile, jQuery, VMware, Google Cloud, K8S, StackDriver, Django, SQlite, PostgreSQL, Photoshop, Illustrator
                         </p>    
 
                     </div>
@@ -307,7 +307,7 @@
                         <p class="info">Learning</p>
 
                         <p>
-                            Ansinble, Fabric, Jenkins, Chef, Puppet, ReactJS, R, OpenCV, Keras, Elastic search, Logstash, Telegraf, Kibana, Jira
+                            Ansinble, Fabric, Jenkins, Bash, Chef, Puppet, ReactJS, R, OpenCV, Keras, Elastic search, Logstash, Telegraf, Kibana, Jira
                         </p>    
 
                     </div>
