--- a/templates/index.html
+++ b/templates/index.html
@@ -59,9 +59,9 @@
                     </span>
                 </h3>
                     <ul class="social">
-                        <li><a href="https://twitter.com/UrbiGT"><i class="fa fa-twitter"></i></a></li>
-                        <li><a href="https://www.linkedin.com/in/urbangt"><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="https://github.com/urbanonymous"><i class="fa fa-github"></i></a></li>
+                        <li><a href="https://twitter.com/UrbiGT" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/urbangt" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+                        <li><a href="https://github.com/urbanonymous" target="_blank"><i class="fa fa-github"></i></a></li>
                     </ul>
             </div>
         </div>
@@ -352,9 +352,9 @@
             <div class="twelve columns">
 
                 <ul class="social-links">
-                    <li><a href="https://twitter.com/UrbiGT"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="https://www.linkedin.com/in/urbangt"><i class="fa fa-linkedin"></i></a></li>
-                    <li><a href="https://github.com/urbanonymous"><i class="fa fa-github"></i></a></li>
+                    <li><a href="https://twitter.com/UrbiGT" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/urbangt" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+                    <li><a href="https://github.com/urbanonymous" target="_blank"><i class="fa fa-github"></i></a></li>
                 </ul>
 
                 <ul class="copyright">
