--- a/templates/index.html
+++ b/templates/index.html
@@ -55,7 +55,7 @@
                 <h1 class="responsive-headline">I'm Urbano Gutierrez</h1>
                 <h3>
                     <span>
-                        I'm a Barcelona based junior Python developer. Self-taught coder, algorithmic trader, system administrator and web designer.
+                        I'm a Barcelona based Senior Python developer. Self-taught coder, algorithmic trader, Bitcoin enthusiast. "The backend guy"
                     </span>
                 </h3>
                     <ul class="social">
@@ -89,10 +89,9 @@
 
                 <h2>About Me</h2>
 
-                <p>A proactive, resourceful and highly organized individual with the ability to manage multiple
-                    projects at the same time.
+                <p>A proactive, resourceful and highly organized individual. Enjoys working in teams and refactoring code.
 
-                    Self-taught coder since 15 years old, currently looking for a full time Python developer role in Barcelona.
+                    Self-taught coder since 15 years old, currently working full time as Senior Python developer at ITnow (CaixaBank), Barcelona.
                 </p>
 
                 <div class="row">
@@ -101,9 +100,9 @@
 
                         <h2>Contact Details</h2>
                         <p class="address">
-                            <span>Urbano Gutierrez (22)</span><br>
+                            <span>Urbano Gutierrez (23)</span><br>
                             <span>Barcelona<br>
-                                <span>08025</span><br>
+                                <span>08029</span><br>
                                 <span>ugutitej@gmail.com</span>
                         </p>
 
@@ -163,17 +162,17 @@
 
                     <div class="twelve columns">
 
-                        <h3>Freelancer (Spain - Online)</h3>
+                        <h3>Freelancer (Spain - Remote)</h3>
                         <p class="info">Junior Python Developer<span>&bull;</span> <em class="date">August 2017 -
                             October 2017 </em></p>
 
                         <p>
-                            Created a multiplatform (Windows, Android) GUI app using Python - Kivy, 
-                            the app consists in a manager of assets (crypto, banks) with a connection to a backend based in Flask
-                            and connections to various exchanges using REST APIs.
+                            Created a multiplatform (Windows, Android) GUI app using Python - Kivy. 
+                            The app consisted in a manager of assets (cryptocurrencies, bank accounts). Connected to a backend based in Python - Flask,
+                            with connections to various cryptocurrencies exchanges using REST APIs.
                         </p>
                         <p>
-                            Made some data mining with Python, Requests, Selenium Webdriver and Beautifulsoup4.
+                            Made some data mining with Python, Requests, Selenium Webdriver and Beautifulsoup.
                         </p>
 
                     </div>
@@ -193,10 +192,10 @@
                         </p>
                         <p>
                             Integrated some web services between social platforms for our team communications using APIs and Python backends using Flask and MongoDB.
-                            Some of them: Asana, Discord, Telegram, Skype, Monday, Slack, Sentry, AWS, GoogleCloud, Docker, CircleCI.
+                            Some of them: Asana, Discord, Telegram, Skype, Monday, Slack, Sentry, AWS, GoogleCloud and CircleCI.
                         </p>
                         <p>
-                            Established CircleCI, Docker Swarm - Hub, pytest, for continuous integration and delivery in our Github projects.
+                            Established CircleCI, Docker Swarm - Hub, pytest, for continuous integration and delivery (CI/CD) with our Github projects.
                         </p>
                         <p>
                             Created webApps (HTML5, CSS3, JavaScript, Python) to research transactions of Ethereum and recovery of lost IOTA funds with proper backends in Flask.
